[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = [{name = "Author Name", email = "author@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "networkx",
    "matplotlib"
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/yourusername/yourproject"

[project.scripts]
generate_graph = "large_graph_generator.main:generate_large_random_graph"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]